# dining_philisophers

./: CMakeLists.txt  README.md  main.cpp  philosopher.cpp  philosopher.hpp
